Archive2/e1/6cd3404f168e1a/output
main.cpp:5:16: error: ambiguous conversion from derived class 'C' to base class 'Z<int>':
    struct C -> struct B -> Z<int>
    struct C -> Z<int>
int main() { f(C()); }
               ^~~
1 error generated.
